[project]
name = "travel-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asttokens>=3.0.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-groq>=1.1.2",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
]
