[project]
name = "travel-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair==4.2.2",
    "asttokens>=3.0.1",
    "fastapi>=0.135.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.10",
    "langchain-tavily>=0.2.17",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.19.0",
    "uvicorn>=0.41.0",
]
